--- a/source/html/includes/blocks/accordion-section.html
+++ b/source/html/includes/blocks/accordion-section.html
@@ -1,4 +1,4 @@
-<section class="accordion-section">
+<section class="accordion-section accordion-section-w-image margin-control">
   <div class="container">
     <div class="h2">
       <span>
@@ -7,15 +7,21 @@
     </div>
     <div class="row">
       <div class="col-lg-6 col-md-12 col-m-12">
-        <div class="image-wrapper">
+        <div class="image-wrapper show"  data-accordion-image="1">
           <img src="./img/accordion-section-image.png" alt="">
+        </div>
+        <div class="image-wrapper" data-accordion-image="2">
+          <img src="./img/content-section-image.png" alt="">
+        </div>
+        <div class="image-wrapper"  data-accordion-image="3">
+          <img src="./img/content-section-image.png" alt="">
         </div>
       </div>
       <div class="col-lg-6 col-md-12 col-m-12">
-        <div class="accordion">
-          <div class="accordion-item active">
-            <div class="accordion-item-header">Research Innovation: trend forecasting, critical thinking</div>
-            <div class="accordion-item-content">
+        <div class="accordion-new">
+          <div  data-accordion-image="1" class="accordion-new-item active">
+            <div class="accordion-new-item-header">Research Innovation: trend forecasting, critical thinking</div>
+            <div class="accordion-new-item-content">
               <div class="accordion-content-wrapper">
                 <p>
                   1200 With the Miami campus initiated in 2018 and located in the Design District, studying a Bachelor’s of Fine Arts fashion degree at Istituto Marangoni Miami grants students the chance to succeed in the most in-demand fashion careers. Even in the United States, Istituto Marangoni Miami maintains its European foundation by teaching the Italian way of design and fashion but with a twist of the Miami style. IMM students are encouraged to complete their associate degree to then move on to their bachelor’s degree, and have the opportunity for acceptance into a Marangoni master’s program if desired. Once participants complete their degree, they transition into the Istituto Marangoni alumni group alongside major fashion names like Franco Moschino, Domenico Dolce, and Alessandro Sartori.
@@ -26,9 +32,9 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
-            <div class="accordion-item-header">Research Innovation: trend forecasting, critical thinking</div>
-            <div class="accordion-item-content">
+          <div  data-accordion-image="2" class="accordion-new-item">
+            <div class="accordion-new-item-header">Research Innovation: trend forecasting, critical thinking</div>
+            <div class="accordion-new-item-content">
               <div class="accordion-content-wrapper">
                 <p>
                   1200 With the Miami campus initiated in 2018 and located in the Design District, studying a Bachelor’s of Fine Arts fashion degree at Istituto Marangoni Miami grants students the chance to succeed in the most in-demand fashion careers. Even in the United States, Istituto Marangoni Miami maintains its European foundation by teaching the Italian way of design and fashion but with a twist of the Miami style. IMM students are encouraged to complete their associate degree to then move on to their bachelor’s degree, and have the opportunity for acceptance into a Marangoni master’s program if desired. Once participants complete their degree, they transition into the Istituto Marangoni alumni group alongside major fashion names like Franco Moschino, Domenico Dolce, and Alessandro Sartori.
@@ -39,9 +45,9 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
-            <div class="accordion-item-header">Research Innovation: trend forecasting, critical thinking</div>
-            <div class="accordion-item-content">
+          <div  data-accordion-image="3" class="accordion-new-item">
+            <div class="accordion-new-item-header">Research Innovation: trend forecasting, critical thinking</div>
+            <div class="accordion-new-item-content">
               <div class="accordion-content-wrapper">
                 <p>
                   1200 With the Miami campus initiated in 2018 and located in the Design District, studying a Bachelor’s of Fine Arts fashion degree at Istituto Marangoni Miami grants students the chance to succeed in the most in-demand fashion careers. Even in the United States, Istituto Marangoni Miami maintains its European foundation by teaching the Italian way of design and fashion but with a twist of the Miami style. IMM students are encouraged to complete their associate degree to then move on to their bachelor’s degree, and have the opportunity for acceptance into a Marangoni master’s program if desired. Once participants complete their degree, they transition into the Istituto Marangoni alumni group alongside major fashion names like Franco Moschino, Domenico Dolce, and Alessandro Sartori.
@@ -57,3 +63,5 @@
     </div>
   </div>
 </section>
+
+
