--- a/source/html/includes/blocks/custom-cards-block.html
+++ b/source/html/includes/blocks/custom-cards-block.html
@@ -1,69 +1,69 @@
-<section class="blog-cards-section">
+<section class="custom-cards-section">
   <div class="container">
     <div class="title-wrapper">
       <div class="h2">
-        <span> Our <b>Blog</b></span>
+        <span> Our <b>custom</b></span>
         <span><b>& news</b></span>
       </div>
       <a href="#" class="btn btn-circle btn-circle-arrow">All news</a>
     </div>
-    <div class="blog-list">
-      <div class="blog-list-item card-bordered-wrapper">
-        <div class="blog-item-col">
-          <div class="blog-item-content">
-            <div class="blog-item-title">All You Need to Know About a Career in Fashion Merchandising</div>
+    <div class="custom-list">
+      <div class="custom-list-item card-bordered-wrapper">
+        <div class="custom-item-col">
+          <div class="custom-item-content">
+            <div class="custom-item-title">All You Need to Know About a Career in Fashion Merchandising</div>
             <div class="text-description">
               <p>The fashion industry overall is a dynamic and vibrant field but it’s also competitive. Dependent on creativity, research, and innovation, fashion merchandising is a vital component of the fashion and luxury environment that goes beyond everything to know about fashion. By combining ...</p>
             </div>
           </div>
-          <div class="blog-item-meta">
-            <div class="blog-item-cat">Category of blog</div>
-            <div class="blog-item-date">25 Oct 2023 12:30 pm</div>
+          <div class="custom-item-meta">
+            <div class="custom-item-cat">Category of custom</div>
+            <div class="custom-item-date">25 Oct 2023 12:30 pm</div>
             <a href="#" class="link-red link-red-arrow">Read more</a>
           </div>
         </div>
-        <div class="blog-item-col">
-          <div class="blog-card-image">
+        <div class="custom-item-col">
+          <div class="custom-card-image">
             <img src="./img/blog-card-image.png" alt="">
           </div>
         </div>
       </div>
-      <div class="blog-list-item card-bordered-wrapper">
-        <div class="blog-item-col">
-          <div class="blog-item-content">
-            <div class="blog-item-title">All You Need to Know About a Career in Fashion Merchandising</div>
+      <div class="custom-list-item card-bordered-wrapper">
+        <div class="custom-item-col">
+          <div class="custom-item-content">
+            <div class="custom-item-title">All You Need to Know About a Career in Fashion Merchandising</div>
             <div class="text-description">
               <p>The fashion industry overall is a dynamic and vibrant field but it’s also competitive. Dependent on creativity, research, and innovation, fashion merchandising is a vital component of the fashion and luxury environment that goes beyond everything to know about fashion. By combining ...</p>
             </div>
           </div>
-          <div class="blog-item-meta">
-            <div class="blog-item-cat">Category of blog</div>
-            <div class="blog-item-date">25 Oct 2023 12:30 pm</div>
+          <div class="custom-item-meta">
+            <div class="custom-item-cat">Category of custom</div>
+            <div class="custom-item-date">25 Oct 2023 12:30 pm</div>
             <a href="#" class="link-red link-red-arrow">Read more</a>
           </div>
         </div>
-        <div class="blog-item-col">
-          <div class="blog-card-image">
+        <div class="custom-item-col">
+          <div class="custom-card-image">
             <img src="./img/blog-card-image.png" alt="">
           </div>
         </div>
       </div>
-      <div class="blog-list-item card-bordered-wrapper">
-        <div class="blog-item-col">
-          <div class="blog-item-content">
-            <div class="blog-item-title">All You Need to Know About a Career in Fashion Merchandising</div>
+      <div class="custom-list-item card-bordered-wrapper">
+        <div class="custom-item-col">
+          <div class="custom-item-content">
+            <div class="custom-item-title">All You Need to Know About a Career in Fashion Merchandising</div>
             <div class="text-description">
               <p>The fashion industry overall is a dynamic and vibrant field but it’s also competitive. Dependent on creativity, research, and innovation, fashion merchandising is a vital component of the fashion and luxury environment that goes beyond everything to know about fashion. By combining ...</p>
             </div>
           </div>
-          <div class="blog-item-meta">
-            <div class="blog-item-cat">Category of blog</div>
-            <div class="blog-item-date">25 Oct 2023 12:30 pm</div>
+          <div class="custom-item-meta">
+            <div class="custom-item-cat">Category of custom</div>
+            <div class="custom-item-date">25 Oct 2023 12:30 pm</div>
             <a href="#" class="link-red link-red-arrow">Read more</a>
           </div>
         </div>
-        <div class="blog-item-col">
-          <div class="blog-card-image">
+        <div class="custom-item-col">
+          <div class="custom-card-image">
             <img src="./img/blog-card-image.png" alt="">
           </div>
         </div>
@@ -71,3 +71,7 @@
     </div>
   </div>
 </section>
+
+
+
+
