--- a/source/html/includes/blocks/events-section-main.html
+++ b/source/html/includes/blocks/events-section-main.html
@@ -1,4 +1,4 @@
-<section class="event-section-main section-with-slider">
+<section class="event-section-main section-with-slider margin-control">
   <div class="container">
     <div class="title-wrapper">
       <div class="h2">
