--- a/source/html/includes/blocks/events-section.html
+++ b/source/html/includes/blocks/events-section.html
@@ -1,4 +1,4 @@
-<section class="events-section section-with-slider">
+<section class="events-section section-with-slider margin-control">
   <div class="container">
     <div class="title-wrapper">
       <div class="h2">
