--- a/source/html/includes/blocks/faq-section.html
+++ b/source/html/includes/blocks/faq-section.html
@@ -1,51 +1,12 @@
-<section class="faq-section">
+<section class="faq-section margin-control">
   <div class="container">
     <div class="row">
       <div class="col-lg-7 col-md-12 col-m-12">
         <div class="h2"><b>FAQ</b></div>
-        <div class="accordion">
-          <div class="accordion-item active">
-            <div class="accordion-item-header">What is a bachelor’s degree in fashion?</div>
-            <div class="accordion-item-content">
-              <div class="accordion-content-wrapper">
-                <p>
-                  A Bachelor’s Degree in fashion or a Bachelor’s in Fine Arts degree from Istituto Marangoni Miami is a 4-year program established to implement all of the teachings needed in the fashion industry in order for students to succeed once they graduate and are in the real-world of fashion. IMM offers various branches in the fashion bachelor’s degree to choose from based on the applicant's interests and aspirations. A BFA in Fashion Design teaches students the knowledge and skills needed for designing clothing and accessories – pattern cutting, garment technology, etc. all while developing the student’s personal style.
-                </p>
-                <p>
-                  A BFA in Fashion Styling introduces concepts in visual communication, trend forecasting, and the analysis of style and brands to apply to ever changing technologies in the industry. A BFA in Fashion Business highlights the different methods and business types that are part of the global fashion industry through the aspects of management, marketing, and practices.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <div class="accordion-item-header">What is a bachelor’s degree in fashion?</div>
-            <div class="accordion-item-content">
-              <div class="accordion-content-wrapper">
-                <p>
-                  A Bachelor’s Degree in fashion or a Bachelor’s in Fine Arts degree from Istituto Marangoni Miami is a 4-year program established to implement all of the teachings needed in the fashion industry in order for students to succeed once they graduate and are in the real-world of fashion. IMM offers various branches in the fashion bachelor’s degree to choose from based on the applicant's interests and aspirations. A BFA in Fashion Design teaches students the knowledge and skills needed for designing clothing and accessories – pattern cutting, garment technology, etc. all while developing the student’s personal style.
-                </p>
-                <p>
-                  A BFA in Fashion Styling introduces concepts in visual communication, trend forecasting, and the analysis of style and brands to apply to ever changing technologies in the industry. A BFA in Fashion Business highlights the different methods and business types that are part of the global fashion industry through the aspects of management, marketing, and practices.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <div class="accordion-item-header">What is a bachelor’s degree in fashion?</div>
-            <div class="accordion-item-content">
-              <div class="accordion-content-wrapper">
-                <p>
-                  A Bachelor’s Degree in fashion or a Bachelor’s in Fine Arts degree from Istituto Marangoni Miami is a 4-year program established to implement all of the teachings needed in the fashion industry in order for students to succeed once they graduate and are in the real-world of fashion. IMM offers various branches in the fashion bachelor’s degree to choose from based on the applicant's interests and aspirations. A BFA in Fashion Design teaches students the knowledge and skills needed for designing clothing and accessories – pattern cutting, garment technology, etc. all while developing the student’s personal style.
-                </p>
-                <p>
-                  A BFA in Fashion Styling introduces concepts in visual communication, trend forecasting, and the analysis of style and brands to apply to ever changing technologies in the industry. A BFA in Fashion Business highlights the different methods and business types that are part of the global fashion industry through the aspects of management, marketing, and practices.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <div class="accordion-item-header">What is a bachelor’s degree in fashion?</div>
-            <div class="accordion-item-content">
+        <div class="accordion-new">
+          <div class="accordion-new-item active">
+            <div class="accordion-new-item-header">What is a bachelor’s degree in fashion?</div>
+            <div class="accordion-new-item-content">
               <div class="accordion-content-wrapper">
                 <p>
                   A Bachelor’s Degree in fashion or a Bachelor’s in Fine Arts degree from Istituto Marangoni Miami is a 4-year program established to implement all of the teachings needed in the fashion industry in order for students to succeed once they graduate and are in the real-world of fashion. IMM offers various branches in the fashion bachelor’s degree to choose from based on the applicant's interests and aspirations. A BFA in Fashion Design teaches students the knowledge and skills needed for designing clothing and accessories – pattern cutting, garment technology, etc. all while developing the student’s personal style.
