--- a/source/html/includes/blocks/full-width-video-section.html
+++ b/source/html/includes/blocks/full-width-video-section.html
@@ -1,5 +1,8 @@
-<section class="full-width-video">
+<section class="full-width-video margin-control">
   <div class="container">
+    <div class="image-wrapper">
+      <img src="./img/content-block-image.png" alt="">
+    </div>
     <div class="default-video-wrapper">
       <video>
         <source src="./img/asdasd.mp4">
