--- a/source/html/includes/blocks/gallery-section.html
+++ b/source/html/includes/blocks/gallery-section.html
@@ -1,4 +1,4 @@
-<section class="images-gallery">
+<section class="images-gallery margin-control">
   <div class="container">
     <div class="masonry-grid">
       <a href="#" class="grid-item open-modal-dialog" data-src="modal-gallery-image">
