--- a/source/html/includes/blocks/program-cards-block.html
+++ b/source/html/includes/blocks/program-cards-block.html
@@ -1,4 +1,4 @@
-<section class="program-cards-section">
+<section class="program-cards-section margin-control">
   <div class="container">
     <div class="h2">
       <span>
