--- a/source/html/includes/blocks/programs-section.html
+++ b/source/html/includes/blocks/programs-section.html
@@ -1,4 +1,4 @@
-<section class="programs-section">
+<section class="programs-section margin-control">
   <div class="container">
     <div class="h2">
       <span>Discover Our</span>
