--- a/source/html/includes/blocks/request-section.html
+++ b/source/html/includes/blocks/request-section.html
@@ -1,4 +1,4 @@
-<section class="request-section">
+<section class="request-section margin-control">
   <div class="container">
     <div class="request-block">
       <div class="h2">Join The Miami Fashion Movement</div>
