--- a/source/html/includes/blocks/staff-section.html
+++ b/source/html/includes/blocks/staff-section.html
@@ -1,64 +1,53 @@
-<section class="staff-section section-with-slider">
+<section class="staff-section-new margin-control">
   <div class="container">
-    <div class="slider-wrapper staff-slider">
+    <div class="title-wrapper">
       <div class="h2">
         <span>meet our</span>
         <span><b>faculty</b></span>
       </div>
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="staff-card">
-            <div class="staff-image">
-              <img src="./img/staff-image.png" alt="">
-            </div>
-            <div class="staff-name">Keanan
-              Duffty</div>
-            <div class="staff-position">Dean of Fashion</div>
+      <a href="#" class="btn btn-circle btn-circle-arrow"></a>
+    </div>
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
           </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="staff-card">
-            <div class="staff-image">
-              <img src="./img/staff-image.png" alt="">
-            </div>
-            <div class="staff-name">Keanan
-              Duffty</div>
-            <div class="staff-position">Dean of Fashion</div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="staff-card">
-            <div class="staff-image">
-              <img src="./img/staff-image.png" alt="">
-            </div>
-            <div class="staff-name">Keanan
-              Duffty</div>
-            <div class="staff-position">Dean of Fashion</div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="staff-card">
-            <div class="staff-image">
-              <img src="./img/staff-image.png" alt="">
-            </div>
-            <div class="staff-name">Keanan
-              Duffty</div>
-            <div class="staff-position">Dean of Fashion</div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="staff-card">
-            <div class="staff-image">
-              <img src="./img/staff-image.png" alt="">
-            </div>
-            <div class="staff-name">Keanan
-              Duffty</div>
-            <div class="staff-position">Dean of Fashion</div>
-          </div>
+          <div class="staff-name">Keanan
+            Duffty</div>
+          <div class="staff-position">Dean of Fashion</div>
         </div>
       </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
+      <div class="col-lg-3">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
+          </div>
+          <div class="staff-name">Keanan
+            Duffty</div>
+          <div class="staff-position">Dean of Fashion</div>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
+          </div>
+          <div class="staff-name">Keanan
+            Duffty</div>
+          <div class="staff-position">Dean of Fashion</div>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
+          </div>
+          <div class="staff-name">Keanan
+            Duffty</div>
+          <div class="staff-position">Dean of Fashion</div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
