--- a/source/html/includes/blocks/stats-about-section.html
+++ b/source/html/includes/blocks/stats-about-section.html
@@ -1,9 +1,9 @@
-<section class="stats-about-section">
+<section class="stats-about-section margin-control">
   <div class="container">
     <div class="h2">Connecting Excellence, Diversity, and Success</div>
     <div class="row">
       <div class="col-lg-6">
-        <div class="table-wrapper">
+        <div class="table-container">
           <table>
             <tr>
               <td>95%</td>
