--- a/source/html/includes/blocks/students-work.html
+++ b/source/html/includes/blocks/students-work.html
@@ -1,4 +1,4 @@
-<section class="students-works section-with-slider">
+<section class="students-works section-with-slider margin-control">
   <div class="container">
     <div class="h2">
       <span>Students <b>work</b></span>
