--- a/source/html/includes/blocks/table-section.html
+++ b/source/html/includes/blocks/table-section.html
@@ -1,4 +1,4 @@
-<section class="table-section">
+<section class="table-section margin-control">
   <div class="container">
     <div class="title-wrapper">
       <div class="h2">
@@ -47,3 +47,5 @@
     </div>
   </div>
 </section>
+
+
