--- a/source/html/includes/blocks/testimonials.html
+++ b/source/html/includes/blocks/testimonials.html
@@ -1,4 +1,4 @@
-<section class="testimonials">
+<section class="testimonials margin-control">
   <div class="container">
     <div class="h2">
       <span>Your new</span>
