--- a/source/html/views/graduate-program.html
+++ b/source/html/views/graduate-program.html
@@ -3,11 +3,31 @@
 
 <section class="page-banner" >
   <div class="container">
-    <div class="page-banner-wrapper" style="background-image: url(./img/graduate-back.png)">
+    <div class="page-banner-wrapper">
       <h1 class="h2">
         graduate
         <b>Program</b>
       </h1>
+      <div class="banner-back-fixed default-video-wrapper">
+        <video>
+          <source src="./img/asdasd.mp4">
+        </video>
+        <div class="btn-play"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="page-banner" >
+  <div class="container">
+    <div class="page-banner-wrapper">
+      <h1 class="h2">
+        graduate
+        <b>Program</b>
+      </h1>
+      <div class="banner-back-fixed image-wrapper">
+        <img src="./img/graduate-back.png" alt="">
+      </div>
     </div>
   </div>
 </section>
