--- a/source/scss/components/_faq-section.scss
+++ b/source/scss/components/_faq-section.scss
@@ -12,4 +12,9 @@
     }
   }
 
+  .accordion-new .accordion-new-item .accordion-new-item-content p, .accordion-new .accordion-new-item .accordion-new-item-content a, .accordion-new .accordion-new-item .accordion-new-item-content span {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
 }
