--- a/source/scss/components/_full-width-video-section.scss
+++ b/source/scss/components/_full-width-video-section.scss
@@ -9,5 +9,16 @@
 
   .default-video-wrapper {
     height: 700px;
+    width: 100%;
+  }
+  .image-wrapper {
+    width: 100%;
+    height: 700px;
+
+    img {
+      height: inherit;
+      width: 100%;
+      object-fit: cover;
+    }
   }
 }
