--- a/source/scss/components/_index.scss
+++ b/source/scss/components/_index.scss
@@ -21,7 +21,7 @@
 @import "program-cards-block";
 @import "text-block-w-image";
 @import "catalog-block";
-@import "blog-cards-block";
+@import "custom-cards-block";
 @import "page-banner";
 @import "main-tags-section";
 @import "accordion-section";
@@ -29,3 +29,6 @@
 @import "cards-slider-section";
 @import "table-section";
 @import "faq-section";
+@import "events-section";
+@import "block-inline-list";
+@import "accordion-level";
