--- a/source/scss/components/_main-tags-section.scss
+++ b/source/scss/components/_main-tags-section.scss
@@ -30,7 +30,7 @@
         font-weight: 400;
         line-height: 14px;
         text-transform: uppercase;
-        color: $--color-black;
+        color: $--color-red;
 
         span {
           color: $--color-red;
