--- a/source/html/includes/blocks/apply-section.html
+++ b/source/html/includes/blocks/apply-section.html
@@ -1,13 +1,13 @@
-<section class="apply-section">
+<div class="apply-section">
   <div class="container">
-    <div class="title-block">
-      <div class="h2">Apply for Fall 2024</div>
-    </div>
-    <div class="apply-content">
-      <div class="description">
+    <div class="widget widget_text deadline-text direction-left">
+      <h4 class="widgettitle">Apply for Fall 2024</h4>
+      <div class="textwidget">
         <p>Overwhelmed by the application process? Let our admissions representatives walk you through it. Apply now for our upcoming class and embark on your educational path.</p>
       </div>
-      <a href="#" class="btn btn-white btn-arrow">request info</a>
     </div>
+    <a href="#" class="btn btn-white btn-arrow">request info</a>
   </div>
-</section>
+</div>
+
+
