--- a/source/html/includes/blocks/cards-slider-section.html
+++ b/source/html/includes/blocks/cards-slider-section.html
@@ -1,58 +1,57 @@
-<section class="cards-slider-section">
+<link rel="stylesheet" href="../../../scss/components/_cards-slider-section.scss">
+<section class="cards-section margin-control">
   <div class="container">
     <div class="h2">
       <span>Beyond</span>
       <span><b>The Classroom</b></span>
     </div>
-    <div class="cards-slider slider-wrapper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="content-card">
-            <div class="content-card-image">
-              <img src="./img/content-card-img.png" alt="">
-            </div>
-            <div class="content-card-title">Card title</div>
-            <div class="text-description">
-              <p>Enrich your learning and prepare for work in global contexts with study abroad that exposes you to new perspectives and settings in which to apply your creativity. Our study abroad destinations include Paris, London, Florence, and more.</p>
-            </div>
-            <a href="#" class="link-red link-red-arrow">Read more</a>
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="content-card">
+          <div class="content-card-image">
+            <img src="./img/content-card-img.png" alt="">
           </div>
+          <div class="content-card-title">Card title</div>
+          <div class="text-description">
+            <p>Enrich your learning and prepare for work in global contexts with study abroad that exposes you to new perspectives and settings in which to apply your creativity. Our study abroad destinations include Paris, London, Florence, and more.</p>
+          </div>
+          <a href="#" class="link-red link-red-arrow">Read more</a>
         </div>
-        <div class="swiper-slide">
-          <div class="content-card">
-            <div class="content-card-image">
-              <img src="./img/content-card-img.png" alt="">
-            </div>
-            <div class="content-card-title">Card title</div>
-            <div class="text-description">
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla con</p>
-            </div>
-            <a href="#" class="link-red link-red-arrow">Read more</a>
+      </div>
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="content-card">
+          <div class="content-card-image">
+            <img src="./img/content-card-img.png" alt="">
           </div>
+          <div class="content-card-title">Card title</div>
+          <div class="text-description">
+            <p>Enrich your learning and prepare for work in global contexts with study abroad that exposes you to new perspectives and settings in which to apply your creativity. Our study abroad destinations include Paris, London, Florence, and more.</p>
+          </div>
+          <a href="#" class="link-red link-red-arrow">Read more</a>
         </div>
-        <div class="swiper-slide">
-          <div class="content-card">
-            <div class="content-card-image">
-              <img src="./img/content-card-img.png" alt="">
-            </div>
-            <div class="content-card-title">Card title</div>
-            <div class="text-description">
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla con</p>
-            </div>
-            <a href="#" class="link-red link-red-arrow">Read more</a>
+      </div>
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="content-card">
+          <div class="content-card-image">
+            <img src="./img/content-card-img.png" alt="">
           </div>
+          <div class="content-card-title">Card title</div>
+          <div class="text-description">
+            <p>Enrich your learning and prepare for work in global contexts with study abroad that exposes you to new perspectives and settings in which to apply your creativity. Our study abroad destinations include Paris, London, Florence, and more.</p>
+          </div>
+          <a href="#" class="link-red link-red-arrow">Read more</a>
         </div>
-        <div class="swiper-slide">
-          <div class="content-card">
-            <div class="content-card-image">
-              <img src="./img/content-card-img.png" alt="">
-            </div>
-            <div class="content-card-title">Card title</div>
-            <div class="text-description">
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla con</p>
-            </div>
-            <a href="#" class="link-red link-red-arrow">Read more</a>
+      </div>
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="content-card">
+          <div class="content-card-image">
+            <img src="./img/content-card-img.png" alt="">
           </div>
+          <div class="content-card-title">Card title</div>
+          <div class="text-description">
+            <p>Enrich your learning and prepare for work in global contexts with study abroad that exposes you to new perspectives and settings in which to apply your creativity. Our study abroad destinations include Paris, London, Florence, and more.</p>
+          </div>
+          <a href="#" class="link-red link-red-arrow">Read more</a>
         </div>
       </div>
     </div>
