--- a/source/html/includes/blocks/catalog-block.html
+++ b/source/html/includes/blocks/catalog-block.html
@@ -1,4 +1,4 @@
-<section class="catalog-section">
+<section class="catalog-section margin-control">
   <div class="container">
     <div class="row">
       <div class="col-lg-7 col-md-12 col-m-12">
