--- a/source/html/includes/blocks/program-tabs-section.html
+++ b/source/html/includes/blocks/program-tabs-section.html
@@ -1,4 +1,4 @@
-<section class="program-tabs-section">
+<section class="program-tabs-section margin-control">
   <div class="container">
     <div class="row program-tabs-block">
       <div class="col-lg-6">
