--- a/source/html/includes/blocks/text-block-w-image.html
+++ b/source/html/includes/blocks/text-block-w-image.html
@@ -1,4 +1,4 @@
-<section class="text-section-w-image">
+<section class="text-section-w-image margin-control">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-6 col-m-12">
