--- a/source/scss/components/_accordion.scss
+++ b/source/scss/components/_accordion.scss
@@ -1,7 +1,7 @@
-.accordion {
+.accordion-new {
   width: 100%;
 
-  .accordion-item {
+  .accordion-new-item {
     transition: all 0.3s;
     width: 100%;
     overflow: hidden;
@@ -12,7 +12,7 @@
       border-bottom: 0;
     }
 
-    .accordion-item-header {
+    .accordion-new-item-header {
       font-size: 28px;
       font-weight: 500;
       line-height: 34px;
@@ -40,16 +40,17 @@
 
     }
 
-    .accordion-item-content {
+    .accordion-new-item-content {
       overflow: hidden;
       width: 100%;
       transition: height 0.3s ease-in-out;
       height: 0;
 
-      p {
+      p, a, span {
         font-size: 16px;
         font-weight: 300;
         line-height: 19px;
+        color: $--color-black;
       }
 
       .accordion-content-wrapper {
@@ -59,15 +60,17 @@
 
   }
 
-  .accordion-item.active {
+  .accordion-new-item.active {
 
-    .accordion-item-header {
+    .accordion-new-item-header {
       color: $--color-red;
+
 
       &:after {
         transform: rotate(45deg) scale(-1);
         border-color: $--color-red;
         margin-top: 12px;
+        content: "";
       }
     }
 
