--- a/source/scss/components/_apply-section.scss
+++ b/source/scss/components/_apply-section.scss
@@ -2,26 +2,36 @@
   background-color: $--color-red;
   padding: 66px 0;
 
-  .title-block {
+  .widget {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .btn {
+    margin-left: 50%;
+  }
+
+  .widgettitle {
+    color: $--color-white;
+    max-width: 450px;
+    font-weight: 700;
+    width: 50%;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .textwidget {
+    padding-top: 18px;
+    margin-bottom: 30px;
+    display: inline-block;
     width: 50%;
 
-    .h2 {
+    p {
       color: $--color-white;
-      max-width: 450px;
-      font-weight: 700;
     }
   }
 
-  .apply-content {
-    width: 50%;
-
-    .description {
-      padding-top: 18px;
-      margin-bottom: 30px;
-
-      p {
-        color: $--color-white;
-      }
-    }
-  }
 }
