--- a/source/scss/components/_page-banner.scss
+++ b/source/scss/components/_page-banner.scss
@@ -14,6 +14,25 @@
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
+    position: relative;
+
+    .h2 {
+      z-index: 1;
+    }
+
+    .banner-back-fixed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: inherit;
+
+      img, iframe, video {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   .container {
