--- a/source/scss/components/_stats-about-section.scss
+++ b/source/scss/components/_stats-about-section.scss
@@ -6,19 +6,31 @@
     font-weight: 300;
   }
 
-  .table-wrapper {
+  .image-wrapper {
+
+    img {
+      height: 520px;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .table-container {
     padding-top: 100px;
     padding-bottom: 150px;
   }
 
   table {
     width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
 
     tr {
 
       td {
         padding: 30px 0;
         border-bottom: 1px solid $--color-grey-2;
+        vertical-align: bottom;
 
 
         &:nth-of-type(1) {
