--- a/source/scss/components/_table-section.scss
+++ b/source/scss/components/_table-section.scss
@@ -9,12 +9,17 @@
     }
 
     .link-red {
-      min-width: 101px;
+      min-width: 200px;
     }
   }
 
   .text-description {
     max-width: 690px;
+
+    p span {
+      font-size: 16px;
+      line-height: 19px;
+    }
   }
 
 }
