--- a/source/html/views/index.html
+++ b/source/html/views/index.html
@@ -25,6 +25,14 @@
 
 <%= _.template(require('../includes/blocks/staff-section.html').default)({}) %>
 
+<%= _.template(require('../includes/blocks/contacts-section.html').default)({}) %>
+
+<%= _.template(require('../includes/blocks/text-block-cols.html').default)({}) %>
+
+<%= _.template(require('../includes/blocks/map-block.html').default)({}) %>
+
+<%= _.template(require('../includes/blocks/text-block-full.html').default)({}) %>
+
 <section class="accordion-level-section">
   <div class="container">
     <div class="h2"></div>
