--- a/source/scss/components/_index.scss
+++ b/source/scss/components/_index.scss
@@ -32,3 +32,6 @@
 @import "events-section";
 @import "block-inline-list";
 @import "accordion-level";
+@import "contacts-section";
+@import "text-blocks";
+@import "map-block";
