--- a/source/scss/components/_program-tabs-section.scss
+++ b/source/scss/components/_program-tabs-section.scss
@@ -16,7 +16,7 @@
     }
   }
 
-  .program-tab-panel.hidden {
+  .program-tab-panel.disabled {
     opacity: 0;
     visibility: hidden;
     overflow: hidden;
